fix: dialog z-index bug

--- a/packages/giantgo-render/src/styles/index.scss
+++ b/packages/giantgo-render/src/styles/index.scss
@@ -19,3 +19,35 @@
     }
   }
 }
+
+.form-design-json-box {
+  height: 500px;
+  overflow: auto;
+
+  .vue-codemirror-wrap {
+    height: 100%;
+
+    .CodeMirror-wrap {
+      height: 100%;
+
+      .CodeMirror-scroll {
+        height: 100%;
+        width: 100%;
+      }
+
+      pre.CodeMirror-line,
+      .CodeMirror-linenumber {
+        min-height: 21px;
+        line-height: 21px;
+      }
+
+      .CodeMirror-sizer {
+        margin-left: 35px !important;
+      }
+
+      .CodeMirror-gutter {
+        min-width: 34px;
+      }
+    }
+  }
+}
